--- a/app/src/main/res/layout/activity_steps_counter.xml
+++ b/app/src/main/res/layout/activity_steps_counter.xml
@@ -11,9 +11,16 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/inner_frame_layout_padding"
         app:layout_boxedEdges="all">
-
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@android:style/Widget.Material.ProgressBar.Small"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,6 +28,7 @@
             android:gravity="center"
             >
             <TextView
+                android:padding="1dp"
                 android:layout_gravity="center"
                 android:id="@+id/stepcounter"
                 android:layout_width="wrap_content"
